feat(web): Add favicon and theme icons

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Cogmatiq: Stop Searching. Start Knowing.</title>
     <meta name="description" content="Cogmatiq’s advanced AI converts your documents into secure, interconnected knowledge graphs. Query multiple files for precise, actionable insights—built for professionals, researchers, and enterprises.">
     
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <meta name="msapplication-TileColor" content="#1A2533">
+    <meta name="theme-color" content="#1A2533">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;800&display=swap" rel="stylesheet">
