--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cogmatiq: Stop Searching. Start Knowing.</title>
-    <meta name="description" content="Cogmatiq’s advanced AI converts your documents into secure, interconnected knowledge graphs. Query multiple files for precise, actionable insights—built for professionals, researchers, and enterprises.">
+    <meta name="description" content="Cogmatiq’s advanced AI converts your documents into secure, interconnected Neural Maps. Query multiple files for precise, actionable insights—built for professionals, researchers, and enterprises.">
     
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -55,9 +55,8 @@
         <section class="text-center section-padding bg-gradient-dark animate-fade-in">
             <div class="max-w-5xl mx-auto">
                 <h1 class="text-4xl md:text-6xl font-extrabold mb-4 leading-tight">Stop Searching. Start Knowing.</h1>
-                <p class="text-lg md:text-xl text-gray-400 mb-8 max-w-3xl mx-auto">
-                    Cogmatiq’s AI-powered platform converts PDFs, documents, and more into secure knowledge graphs. Query across files for precise, contextual insights—designed for professionals and enterprises.
-                </p>
+                <p class="text-lg md:text-xl text-gray-400 mb-8 max-w-3xl mx-auto">Cogmatiq’s AI-powered platform converts PDFs, documents, and more into secure Neural Maps. Query across files for precise, contextual insights—designed for professionals and enterprises.</p>
+                
                 <a href="/signup.html" class="accent-bg text-white font-semibold py-4 px-8 rounded-lg text-lg hover-scale inline-block shadow-md">
                     Start Free: Analyze Up to 5 Documents
                 </a>
@@ -77,7 +76,7 @@
         <section class="section-padding animate-fade-in">
             <div class="max-w-6xl mx-auto text-center">
                 <h2 class="text-3xl md:text-4xl font-bold mb-4">Empower Your Workflow with AI Intelligence</h2>
-                <p class="text-gray-400 md:text-lg mb-12 max-w-3xl mx-auto">Upload documents to create custom knowledge bases. Our AI extracts entities and relationships, enabling complex queries with source-verified results—built to scale with your ambitions.</p>
+                <p class="text-gray-400 md:text-lg mb-12 max-w-3xl mx-auto">Upload documents to create a custom Cortex. Our AI extracts entities and relationships, building a Neural Map that enables complex queries with source-verified results—built to scale with your ambitions.</p>
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-left">
                     <div class="card p-8 rounded-lg hover:shadow-lg transition-shadow">
                         <svg class="w-10 h-10 accent-text mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M4.871 15.129c-1.282.973-1.282 2.813 0 3.786.745.564 1.73.885 2.768.885 1.037 0 2.023-.32 2.768-.885 1.282-.973 1.282-2.813 0-3.786a3.87 3.87 0 00-5.536 0zM14.871 15.129c-1.282.973-1.282 2.813 0 3.786.745.564 1.73.885 2.768.885 1.037 0 2.023-.32 2.768-.885 1.282-.973 1.282-2.813 0-3.786a3.87 3.87 0 00-5.536 0zM9.539 4.31a2.27 2.27 0 013.922 0 8.01 8.01 0 014.288 3.322 2.27 2.27 0 011.093 2.502c-.372 1.183-1.63 2.138-3.048 2.138-1.419 0-2.676-.955-3.048-2.138a2.27 2.27 0 011.093-2.502 8.01 8.01 0 01-5.38-5.824zM4.66 8.5c.373-1.183 1.63-2.138 3.048-2.138 1.419 0 2.676.955 3.048 2.138a2.27 2.27 0 01-1.093 2.502 8.01 8.01 0 01-3.907-.001 2.27 2.27 0 01-1.096-2.501z"></path></svg>
@@ -139,7 +138,7 @@
 
                     <div class="card p-8 rounded-lg border-2 border-accent-text">
                         <svg class="w-10 h-10 accent-text mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m8.4-8.4h-1m-16 0H3m15.55-5.55l-.71-.71M6.16 17.84l-.71-.71m12.39-.71l-.71.71M6.16 6.16l-.71.71M12 5a7 7 0 100 14 7 7 0 000-14z"></path></svg>
-                        <h3 class="text-xl font-semibold mb-2">Knowledge Graph</h3>
+                        <h3 class="text-xl font-semibold mb-2">Neural Map</h3>
                         <p class="text-gray-400">Connects related concepts across all your documents to provide synthesized, intelligent answers.</p>
                         <ul class="text-gray-300 mt-4 space-y-2">
                             <li>+ Delivers a single, precise answer.</li>
