new remove feature

--- a/dashboard.html
+++ b/dashboard.html
@@ -175,7 +175,7 @@
                             statusHTML = `<span class="text-xs font-semibold text-yellow-400 animate-pulse">Processing...</span>`;
                             pollDocumentStatus(doc.id);
                         } else {
-                            statusHTML = `<button onclick="deleteDocument('${doc.id}')" class="text-red-400 opacity-0 group-hover:opacity-100 transition-opacity">
+                            statusHTML = `<button title="Remove from this Cortex" onclick="unlinkDocument('${kb.id}', '${doc.id}')" class="text-gray-500 hover:text-red-400 opacity-0 group-hover:opacity-100 transition-opacity">
                                             <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm4 0a1 1 0 012 0v6a1 1 0 11-2 0V8z" clip-rule="evenodd"></path></svg>
                                           </button>`;
                         }
@@ -234,16 +234,17 @@
             }, 5000);
         }
         
-        async function deleteDocument(docId) {
+        async function unlinkDocument(kbId, docId) {
             if (!userToken) return;
-            if (confirm('Are you sure you want to permanently delete this document? This cannot be undone.')) {
+            // Updated confirmation message
+            if (confirm('Are you sure you want to remove this document from this Cortex?')) {
                 try {
-                    const response = await fetch(`https://api.cogmatiq.com/documents/${docId}`, {
+                    const response = await fetch(`https://api.cogmatiq.com/cortices/${kbId}/documents/${docId}`, {
                         method: 'DELETE',
                         headers: { 'Authorization': `Bearer ${userToken}` }
                     });
-                    if (!response.ok) throw new Error('Failed to delete document.');
-                    fetchInitialData();
+                    if (!response.ok) throw new Error('Failed to remove document.');
+                    fetchInitialData(); // Refresh the dashboard
                 } catch (error) {
                     alert(`Error: ${error.message}`);
                 }
