--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="max-w-5xl mx-auto">
                 <h1 class="text-4xl md:text-6xl font-extrabold mb-4 leading-tight">Stop Searching. Start Knowing.</h1>
                 <p class="text-lg md:text-xl text-gray-400 mb-8 max-w-3xl mx-auto">
-                    Create your personal AI "Cortex". Add all your documents, e-books, and webpages, then ask complex questions across your entire library.
+                    Create your personal AI Cortex. Add all your documents, e-books, and webpages, then ask complex questions across your entire library.
                 </p>
                 <a href="/signup.html" class="accent-bg text-white font-semibold py-4 px-8 rounded-lg text-lg hover-scale inline-block shadow-md">
                     Start Free
@@ -172,9 +172,9 @@
                         <p class="text-gray-400 mb-6">For professionals and researchers who need unlimited power.</p>
                         <p class="text-4xl font-extrabold mb-4">$10 <span class="text-lg font-medium text-gray-400">/ month</span></p>
                         <ul class="space-y-3 mb-8 flex-grow">
-                            <li class="flex items-center gap-3"><span class="accent-text">✔</span> **Everything in Free, plus:**</li>
-                            <li class="flex items-center gap-3"><span class="accent-text">✔</span> **Unlimited** Document Uploads</li>
-                            <li class="flex items-center gap-3"><span class="accent-text">✔</span> **Unlimited** Cortices</li>
+                            <li class="flex items-center gap-3"><span class="accent-text">✔</span> Everything in Free, plus:</li>
+                            <li class="flex items-center gap-3"><span class="accent-text">✔</span> Unlimited Document Uploads</li>
+                            <li class="flex items-center gap-3"><span class="accent-text">✔</span> Unlimited Cortices</li>
                             <li class="flex items-center gap-3"><span class="accent-text">✔</span> Priority Support</li>
                         </ul>
                         <a href="/pricing.html" class="w-full text-center accent-bg text-white font-semibold py-3 px-6 rounded-md transition-colors hover-scale">
