new update-password.html

--- a/update-password.html
+++ b/update-password.html
@@ -40,7 +40,7 @@
 
         <div class="card">
             <h1 class="text-2xl font-bold text-center mb-6">Set Your New Password</h1>
-            <form id="update-password-form" class="space-y-6 hidden">
+            <form id="update-password-form" class="space-y-6">
                 <div>
                     <label for="new-password" class="block text-sm font-semibold text-gray-400">New Password</label>
                     <input type="password" id="new-password" required minlength="6" class="mt-1 block w-full p-3 bg-gray-800 border border-gray-700 rounded-md focus:outline-none focus:ring-2 focus:ring-[#00B5AD]">
@@ -67,29 +67,24 @@
         const newPasswordEl = document.getElementById('new-password');
         const confirmPasswordEl = document.getElementById('confirm-password');
 
-        let hasSession = false;
+        // Extract token from URL hash
+        const urlParams = new URLSearchParams(window.location.hash.substring(1));
+        const accessToken = urlParams.get('access_token');
 
-        // 1. Supabase sends the user here with a token in the URL hash.
-        //    This listener detects that token and establishes a secure session.
-        supabaseClient.auth.onAuthStateChange((event, session) => {
-            if (event === 'PASSWORD_RECOVERY') {
-                if (session) {
-                    messageEl.textContent = 'Enter your new password.';
-                    messageEl.classList.remove('text-red-400');
-                    messageEl.classList.add('text-gray-400');
-                    form.classList.remove('hidden');
-                    hasSession = true;
-                } else {
-                    messageEl.textContent = 'Invalid or expired password reset link.';
-                    form.classList.add('hidden');
-                }
-            }
-        });
+        if (!accessToken) {
+            messageEl.textContent = 'Invalid or expired password reset link. Please request a new one.';
+            form.style.display = 'none';
+        } else {
+            messageEl.textContent = 'Enter your new password.';
+            messageEl.classList.remove('text-red-400');
+            messageEl.classList.add('text-gray-400');
+            form.style.display = 'block';
+        }
 
-        // 2. Handle the form submission
         form.addEventListener('submit', async (e) => {
             e.preventDefault();
-            if (!hasSession) {
+
+            if (!accessToken) {
                 messageEl.textContent = 'Invalid session. Please request a new reset link.';
                 return;
             }
@@ -107,21 +102,27 @@
                 return;
             }
 
-            // 3. Update the user's password in Supabase
-            const { data, error } = await supabaseClient.auth.updateUser({
-                password: newPassword
-            });
+            // Exchange the token and update the password
+            try {
+                const { data, error } = await supabaseClient.auth.exchangeToken(accessToken, {
+                    password: newPassword
+                });
 
-            if (error) {
-                messageEl.textContent = `Error: ${error.message}`;
-            } else {
-                messageEl.textContent = 'Password updated successfully! Redirecting to login...';
-                messageEl.classList.remove('text-red-400');
-                messageEl.classList.add('text-green-400');
-                
-                setTimeout(() => {
-                    window.location.href = '/login.html';
-                }, 2000);
+                if (error) {
+                    messageEl.textContent = `Error: ${error.message}`;
+                } else {
+                    messageEl.textContent = 'Password updated successfully! Redirecting to login...';
+                    messageEl.classList.remove('text-red-400');
+                    messageEl.classList.add('text-green-400');
+                    
+                    // Clear the token from the URL and redirect
+                    window.history.replaceState({}, document.title, window.location.pathname);
+                    setTimeout(() => {
+                        window.location.href = '/login.html';
+                    }, 2000);
+                }
+            } catch (err) {
+                messageEl.textContent = `An unexpected error occurred: ${err.message}`;
             }
         });
     </script>
