new update-password.html.1

--- a/update-password.html
+++ b/update-password.html
@@ -67,11 +67,12 @@
         const newPasswordEl = document.getElementById('new-password');
         const confirmPasswordEl = document.getElementById('confirm-password');
 
-        // Extract token from URL hash
+        // Extract token and type from URL hash
         const urlParams = new URLSearchParams(window.location.hash.substring(1));
         const accessToken = urlParams.get('access_token');
+        const type = urlParams.get('type');
 
-        if (!accessToken) {
+        if (!accessToken || type !== 'recovery') {
             messageEl.textContent = 'Invalid or expired password reset link. Please request a new one.';
             form.style.display = 'none';
         } else {
@@ -84,7 +85,7 @@
         form.addEventListener('submit', async (e) => {
             e.preventDefault();
 
-            if (!accessToken) {
+            if (!accessToken || type !== 'recovery') {
                 messageEl.textContent = 'Invalid session. Please request a new reset link.';
                 return;
             }
@@ -102,10 +103,13 @@
                 return;
             }
 
-            // Exchange the token and update the password
+            // Update password using the recovery token
             try {
-                const { data, error } = await supabaseClient.auth.exchangeToken(accessToken, {
+                const { data, error } = await supabaseClient.auth.updateUser({
                     password: newPassword
+                }, {
+                    token: accessToken,
+                    type: 'recovery'
                 });
 
                 if (error) {
