index favicon update

--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <meta name="description" content="Cogmatiq’s advanced AI converts your documents, e-books, and webpages into secure, interconnected Neural Maps. Query multiple sources at once for precise, actionable insights.">
     
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <meta name="msapplication-TileColor" content="#1A2533">
-    <meta name="theme-color" content="#1A2533">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+<meta name="msapplication-TileColor" content="#1A2533">
+<meta name="theme-color" content="#1A2533">
+<link rel="icon" type="image/x-icon" href="/favicon.ico">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
