fix(chat): Force redeploy of persistent chat UI

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;800&display=swap" rel="stylesheet">
 
     <script>
-        // --- START: Environment Detection ---
+        // --- START: Environmental Detection ---
         let apiBaseUrl;
         // *** Verify/Update these hostnames if yours are different ***
         const stagingHostname = 'staging.cogmatiq.com'; 
