fix(chat): Force redeploy of persistent chat UI.2

--- a/chat.html
+++ b/chat.html
@@ -165,7 +165,7 @@
         
         // *** 1. Define ALL Supabase credentials ***
         const supabaseUrlProd = 'https://wzekdxvvynpvisbvkiqg.supabase.co'; // PRODUCTION URL
-        const supabaseAnonKeyProd = 'YOUR_ACTUAL_PROD_ANON_KEY_HERE'; // *** REPLACE WITH YOUR PRODUCTION ANON KEY ***
+        const supabaseAnonKeyProd = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Ind6ZWtkeHZ2eW5wdmlzYnZraXFnIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjA0NzA5NzAsImV4cCI6MjA3NjA0Njk3MH0.CGXF6Txv-OATQdaus08GohMHRyytye59hqaD0Q4BOSU'; // *** REPLACE WITH YOUR PRODUCTION ANON KEY ***
         
         const supabaseUrlStaging = 'https://qcsjjhmbjajgidhqpgdj.supabase.co'; // STAGING URL
         const supabaseAnonKeyStaging = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InFjc2pqaG1iamFqZ2lkaHFwZ2RqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjA4MTI3NzYsImV4cCI6MjA3NjM4ODc3Nn0.QI4JyOoRc-FBxrZXZHo3EpS7okrXRssuCAW_ZzYjMuA'; // STAGING ANON KEY
